5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1863_2219.log
== TEST (2019-07-02 10:21:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))

for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		
		
		
		
-- ERROR:
File "XXXX", line 12
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))

#for i in range(shape(mat)[0]):
	#for j in range(shape(mat)[1]):
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:24:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]
			print(a)
			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]
b=mean(mat)
print(a//b)
			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]
b=mean(mat)
print(a//shape(mat)[0])
			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:29:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]
b=mean(mat)
print(a//shape(mat)[0])
			
		
		
		
		
-- EXECUTION TIME:
1.13526
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

print(a//shape(mat)[0])
			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:30:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:31:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
0.925022
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:32:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:34:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:34:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
0.964402
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:34:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:34:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
0.934771
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
digite: 91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:36:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:37:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:37:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
1.15495
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:38:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:39:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))
print((n**2-n)//2)
			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:39:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))
print((mat**2-mat)//2)
			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:40:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
1.09728
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=round(0,2)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:42:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=round(0,2)
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a += mat[i,j]

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
1.20236
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:45:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)

b = a/shape(mat)[0]

print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
0.770741
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)

b = round(a/shape(mat)[0],2)

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:46:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a=0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)

b = round(a/shape(mat)[0],2)

print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
1.04459
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:46:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
c = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		a = 0
		if i>j:
			a = round(a +  mat[i,j],2)
			a = c
b = round(a/shape(mat)[0],2)

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
c = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		a = 0
		if i>j:
			a = round(a +  mat[i,j],2)
			a = a + c
b = round(a/shape(mat)[0],2)

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
c = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = 0
			a = round(a +  mat[i,j],2)
			a = a + c
b = round(a/shape(mat)[0],2)

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:48:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)	
b = round(a/shape(mat)[0],2)

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:49:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)	
b = round(a/shape(mat)[0],2)

print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:50:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)	
			print(a)
			
b = round(a/shape(mat)[0],2)
print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:50:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)	
			print(a)
			
b = round(a/shape(mat)[0],2)
print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:50:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)	
			print(a)
			
b = round(a/shape(mat)[0],2)
print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:51:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)	
			print(a)
			
b = round(a/shape(mat)[0],2)
print(round(b, 2))

			
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:51:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("digite: ")))
a = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if i>j:
			a = round(a +  mat[i,j],2)	
			
b = round(a/shape(mat)[0],2)
print(round(b, 2))

			
		
		
		
		
-- EXECUTION TIME:
0.945835
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
91.56
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
